# h-encore

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  WRITE-UP.md
bootstrap/: CMakeLists.txt  bootstrap.c
include/: constants.S  functions.S  gadgets.S  macros.S
payload/: Makefile  linker.x  payload.c
plugin/: CMakeLists.txt  LICENSE  config.h  henkaku.h  henkaku_settings.xml  kernel.c  kernel.yml  language.h  system_settings.xml  taihen.json  user.c  user.yml
scripts/: generate.py  obfuscate.py  trim.py
stage1/: Makefile  linker.x  stage1.S
stage2/: Makefile  krop.S  linker.x  stage2.S
